# immich-eagle-album-sync

./: .gitignore  pyproject.toml
app/: main.py
app/services/: __init__.py  correction.py  scanner.py  server.py
app/utils/: config.py  remote.py
